--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,8 @@ owner:
   scholar: 
   bilibili: 89217353
   researchgate: https://www.researchgate.net/profile/Gerui-Xu
-  zhihu: 
-  # facebook: caihanlin2002
-  # instagram: lancecai2002
+  Modevol: https://www.modevol.com/people/cl3hc0jx901wv01nzgjnnbrvs/works
+
   # lastfm:
   # tumblr:
   # For Google Authorship https://plus.google.com/authorship
