--- a/_config.yml
+++ b/_config.yml
@@ -20,10 +20,6 @@ owner:
   researchgate: https://www.researchgate.net/profile/Gerui-Xu
   Modevol: https://www.modevol.com/people/cl3hc0jx901wv01nzgjnnbrvs/works
 
-  # lastfm:
-  # tumblr:
-  # For Google Authorship https://plus.google.com/authorship
-  # google_plus:
 
 # Analytics and webmaster tools stuff goes here
 # https://search.google.com/search-console/ownership
@@ -78,7 +74,7 @@ kramdown:
 
 # disqus settings:
 disqus:
-  shortname: lancecai
+  shortname: Gerui
 
 include: [".htaccess"]
 exclude: ["lib", "config.rb", "Capfile", "config", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "minimal-mistakes.sublime-project", "minimal-mistakes.sublime-workspace"]
