--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: https://GeruiXu.github.io
 # Owner/author information
 owner:
   name: Gerui Xu
-  avatar: gerui1.jpg
+  avatar: gerui.jpg
   bio: The legacy of life is the renewal of knowledge.
   email: shepartick@foxmail.com
   cv: 
